[tool.poetry]
name = "twissh"
version = "0.1.0"
description = ""
authors = ["Alessandro Ricottone <ricott2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Twisted = "^22.4.0"
urwid = "^2.1.2"
cryptography = "^37.0.4"
bcrypt = "^3.2.2"
pyasn1 = "^0.4.8"
tcod = "^13.7.0"
pygame = "2.1.3.dev8"
esper = "^2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
