[tool.poetry]
name = "twissh"
version = "0.1.0"
description = ""
authors = ["Alessandro Ricottone <ricott2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Twisted = "^22.4.0"
urwid = "^2.1.2"
pygame = "2.1.3.dev8"
esper = "^2.1"
cryptography = "^41.0.1"
bcrypt = "^4.0.1"
pyasn1 = "^0.5.0"
mysql-connector-python = "^8.0.33"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
